--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,14 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "tailwindcss";
 
 *{
-    font-family: "Poppins", sans-serif;
+    font-family: "Kanit", sans-serif;
 }
 
+.leaflet-container {
+  z-index: 0 !important;
+}
 
 @theme {
     --color-primary: #2563EB;
     --color-primary-dull: #1F58D8;
     --color-light: #F1F5F9;
     --color-borderColor: #C4C7D2;
+}
+
+.leaflet-tooltip:before,
+.leaflet-tooltip-arrow {
+  display: none !important;
+  width: 0 !important;
+  height: 0 !important;
+  border: none !important;
+  background: none !important;
 }
