--- a/frontend/src/pages/water/custom-tooltip.css
+++ b/frontend/src/pages/water/custom-tooltip.css
@@ -23,3 +23,12 @@
     -1px 1px 0 #000,
     1px 1px 0 #000;
 }
+
+.leaflet-popup-close-button {
+  width: 30px !important;
+  height: 30px !important;
+  font-size: 22px !important;
+  line-height: 30px !important;
+  top: 8px !important;
+  right: 8px !important;
+}
