--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -58,3 +58,9 @@ body {
   width: 100%;
 
 }
+
+.custom-tooltip {
+  font-size: 18px !important;  
+  font-weight: bold;           
+  padding: 4px 8px;            
+}
