--- a/frontend/src/pages/profile/ProfilePage.css
+++ b/frontend/src/pages/profile/ProfilePage.css
@@ -6,7 +6,7 @@
   align-items: flex-start; /* ดึงเนื้อหาให้อยู่ด้านบน */
   min-height: 100vh; /* ให้หน้าโปรไฟล์เต็มหน้าจอ */
   padding: 32px 16px; /* เพิ่ม padding-top เพื่อดึงขึ้น */
-  background-color: #f5f5f5; /* สีพื้นหลัง */
+  background-color: rgb(251, 251, 251); /* สีพื้นหลัง */
 }
 
 .profile-card {
